test/cli/test-crd-nonstandard-plural/crds/teleportrolesv8.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: teleportrolesv8.resources.teleport.dev
spec:
  group: resources.teleport.dev
  scope: Namespaced
  names:
    kind: TeleportRoleV8
    plural: teleportrolesv8   # does NOT match UnsafeGuessKindToResource("TeleportRoleV8") = "teleportrolev8s"
    singular: teleportrolev8
  versions:
    - name: v1
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            spec:
              type: object
              x-kubernetes-preserve-unknown-fields: true
