test/cli/test-crd-nonstandard-plural/widget.yaml
apiVersion: example.com/v1
kind: Widget
metadata:
  name: my-widget
  namespace: default
  annotations: {}
